--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <link rel="stylesheet" href="css/desktop.css" media="(min-width:901px)">
 <link rel="stylesheet" href="css/mobile.css" media="(max-width:900px)">
 <script defer src="js/main.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TWRTHX90JM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TWRTHX90JM');
+</script>
 </head>
 
 <body>
@@ -312,6 +322,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
