--- a/index.html
+++ b/index.html
@@ -219,11 +219,17 @@
 
     <div class="trust-stats">
       <div class="stat">
-        <h3>Verified Guidance</h3>
+        <h3>1000+ Property Disputes</h3>
+        <p>Solved</p>
       </div>
 
       <div class="stat">
-        <h3>Transparent Process</h3>
+        <h3>10+ Banks Associated</h3>
+        <p>Loan Processing</p>
+
+      <div class="stat">
+        <h3>10K+ Issues</h3>
+        <p>Completed Cases</p>
         
       </div>
 
@@ -322,6 +328,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
