--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
       <div class="stat">
         <h3>10+ Banks Associated</h3>
         <p>Loan Processing</p>
+      </div>
 
       <div class="stat">
         <h3>10K+ Issues</h3>
         <p>Completed Cases</p>
-        
       </div>
 
       
@@ -328,6 +328,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
