--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
   <div>
     <div class="footer-brand">LandCare</div>
     <div class="footer-tagline">Your trusted partner for land & property services.</div>
+    <div class="social-icons">
+          <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
+            <img src="assets/icons/instagram.svg" alt="Instagram">
+          </a>
+      </div>
   </div>
 
   <div>
@@ -328,6 +333,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
