--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <div class="footer-tagline">Your trusted partner for land & property services.</div>
     <div class="social-icons">
           <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
-            <img src="assets/icons/instagram.svg" alt="Instagram">
+            <img src="assets/instagram.svg" alt="Instagram">
           </a>
       </div>
   </div>
@@ -333,6 +333,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
