--- a/land.html
+++ b/land.html
@@ -82,6 +82,11 @@
   <div>
     <div class="footer-brand">LandCare</div>
     <div class="footer-tagline">Your trusted partner for land & property services.</div>
+    <div class="social-icons">
+          <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
+            <img src="assets/instagram.svg" alt="Instagram">
+          </a>
+      </div>
   </div>
   <div>
     <div class="footer-title">Product</div>
@@ -113,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
