--- a/privacy.html
+++ b/privacy.html
@@ -151,6 +151,11 @@
   <div>
     <div class="footer-brand">LandCare</div>
     <div class="footer-tagline">Your trusted partner for all land & property services.</div>
+    <div class="social-icons">
+          <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
+            <img src="assets/instagram.svg" alt="Instagram">
+          </a>
+      </div>
   </div>
 
   <div>
@@ -187,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
