--- a/property.html
+++ b/property.html
@@ -100,6 +100,11 @@
   <div>
     <div class="footer-brand">LandCare</div>
     <div class="footer-tagline">Your trusted partner for land & property services.</div>
+    <div class="social-icons">
+          <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
+            <img src="assets/instagram.svg" alt="Instagram">
+          </a>
+      </div>
   </div>
 
   <div>
@@ -135,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
