--- a/terms.html
+++ b/terms.html
@@ -149,6 +149,11 @@
   <div>
     <div class="footer-brand">LandCare</div>
     <div class="footer-tagline">Your trusted partner for all land & property services.</div>
+    <div class="social-icons">
+          <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
+            <img src="assets/instagram.svg" alt="Instagram">
+          </a>
+      </div>
   </div>
 
   <div>
@@ -185,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
