--- a/finance.html
+++ b/finance.html
@@ -83,7 +83,7 @@
     <div class="footer-tagline">Your trusted partner for land & property services.</div>
     <div class="social-icons">
           <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
-            <img src="assets/instagram.svg" alt="Instagram">
+            <img src="assets/images/instagram.svg" alt="Instagram">
           </a>
       </div>
   </div>
@@ -117,6 +117,7 @@
 
 </body>
 </html>
+
 
 
 
