--- a/land.html
+++ b/land.html
@@ -84,7 +84,7 @@
     <div class="footer-tagline">Your trusted partner for land & property services.</div>
     <div class="social-icons">
           <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
-            <img src="assets/instagram.svg" alt="Instagram">
+            <img src="assets/images/instagram.svg" alt="Instagram">
           </a>
       </div>
   </div>
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
