--- a/terms.html
+++ b/terms.html
@@ -151,7 +151,7 @@
     <div class="footer-tagline">Your trusted partner for all land & property services.</div>
     <div class="social-icons">
           <a href="https://www.instagram.com/land.care?igsh=MzNhaG93OGZ3aHd4" target="_blank">
-            <img src="assets/instagram.svg" alt="Instagram">
+            <img src="assets/images/instagram.svg" alt="Instagram">
           </a>
       </div>
   </div>
@@ -190,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
