--- a/privacy.html
+++ b/privacy.html
@@ -143,7 +143,7 @@
   <p>We may update this Privacy Policy when required. Continued use implies acceptance.</p>
 
   <h2>8. Contact</h2>
-  <p>For privacy-related queries: <br><strong>consult@landcare.com</strong></p>
+  <p>For privacy-related queries: <br><strong>consultlandcare@gmail.com</strong></p>
 </div>
 
 <footer>
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
