--- a/privacy.html
+++ b/privacy.html
@@ -181,7 +181,7 @@
 
   <div>
     <div class="footer-title">Contact</div>
-    <a class="footer-link" href="mailto:consult@landcare.com">consultlandcare@gmail.com</a>
+    <a class="footer-link" href="mailto:consultlandcare@gmail.com">consultlandcare@gmail.com</a>
   </div>
 
 </footer>
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
