--- a/land.html
+++ b/land.html
@@ -104,11 +104,11 @@
   <div>
     <div class="footer-title">Support</div>
     <a class="footer-link" href="index.html#Frequently Asked Questions">FAQ</a>
-    <a class="footer-link" href="#">Report Issue</a>
+    <a class="footer-link" href="report.html">Report Issue</a>
   </div>
   <div>
     <div class="footer-title">Contact</div>
-    <a class="footer-link" href="mailto:consult@landcare.com">consultlandcare@gmail.com</a>
+    <a class="footer-link" href="mailto:consultlandcare@gmail.com">consultlandcare@gmail.com</a>
   </div>
 </footer>
 
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
