--- a/privacy.html
+++ b/privacy.html
@@ -176,7 +176,7 @@
   <div>
     <div class="footer-title">Support</div>
     <a class="footer-link" href="index.html#Frequently Asked Questions">FAQ</a>
-    <a class="footer-link" href="#">Report Issue</a>
+    <a class="footer-link" href="report.html">Report Issue</a>
   </div>
 
   <div>
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
