--- a/property.html
+++ b/property.html
@@ -125,12 +125,12 @@
   <div>
     <div class="footer-title">Support</div>
     <a class="footer-link" href="index.html#Frequently Asked Questions">FAQ</a>
-    <a class="footer-link" href="#">Report Issue</a>
+    <a class="footer-link" href="report.html">Report Issue</a>
   </div>
 
   <div>
     <div class="footer-title">Contact</div>
-    <a class="footer-link" href="mailto:consult@landcare.com">consultlandcare@gmail.com</a>
+    <a class="footer-link" href="mailto:consultlandcare@gmail.com">consultlandcare@gmail.com</a>
   </div>
 </footer>
 
@@ -140,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
