--- a/nriservices.html
+++ b/nriservices.html
@@ -96,6 +96,40 @@ Legal documentation, agreement drafting, and registration handling
   </div>
 </section>
 
+<!-- WHY NRI TRUST US SECTION -->
+<section style="padding:70px 8vw;">
+  <h2 style="font-size:32px; font-weight:900; margin-bottom:30px;">Why NRI Trust Us?</h2>
+
+  <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:26px;">
+
+    <div class="why-box">
+      <h3 style="font-size:20px; font-weight:800;">✔ Dedicated support for NRI clients only</h3>
+      <p style="margin-top:10px; color:#4b5563;">Professionals experienced in land, property, verification & legal support.</p>
+    </div>
+
+    <div class="why-box">
+      <h3 style="font-size:20px; font-weight:800;">✔ Strong legal and on-ground expertise</h3>
+      <p style="margin-top:10px; color:#4b5563;">Clear reporting, documented process & end-to-end clarity.</p>
+    </div>
+
+    <div class="why-box">
+      <h3 style="font-size:20px; font-weight:800;">✔ Transparent process with regular updates</h3>
+      <p style="margin-top:10px; color:#4b5563;">Verification & support done within defined timelines.</p>
+    </div>
+
+    <div class="why-box">
+      <h3 style="font-size:20px; font-weight:800;">✔ No need to travel to India </h3>
+      <p style="margin-top:10px; color:#4b5563;">Your property details & documents are always safe.</p>
+    </div>
+
+    <div class="why-box">
+      <h3 style="font-size:20px; font-weight:800;">✔ End to end handling from verification to registration </h3>
+      <p style="margin-top:10px; color:#4b5563;">Your property details & documents are always safe.</p>
+    </div>
+
+  </div>
+</section>
+
 <footer>
   <div>
     <div class="footer-brand">LandCare</div>
