--- a/nriservices.html
+++ b/nriservices.html
@@ -130,6 +130,8 @@ Legal documentation, agreement drafting, and registration handling
   </div>
 </section>
 
+<!---How it works----->
+
 <footer>
   <div>
     <div class="footer-brand">LandCare</div>
