--- a/nriservices.html
+++ b/nriservices.html
@@ -131,6 +131,14 @@ Legal documentation, agreement drafting, and registration handling
 </section>
 
 <!---How it works----->
+<section class="work">
+  <div>
+    <li>1. Share Your Requirement – Buy, sell, verify, or register property</li>
+    <li>2. We Handle Ground & Legal Work – Site visits, legal checks, documentation</li>
+    <li>3. Regular Updates – Photos, videos, and progress reports</li>
+    <li>4. Safe Completion – Legal closure and registration support</li>
+  </div>
+</section>
 
 <footer>
   <div>
