--- a/nriservices.html
+++ b/nriservices.html
@@ -133,10 +133,11 @@ Legal documentation, agreement drafting, and registration handling
 <!---How it works----->
 <section class="work">
   <div>
-    <li>1. Share Your Requirement – Buy, sell, verify, or register property</li>
+    <ul> <li>1. Share Your Requirement – Buy, sell, verify, or register property</li>
     <li>2. We Handle Ground & Legal Work – Site visits, legal checks, documentation</li>
     <li>3. Regular Updates – Photos, videos, and progress reports</li>
-    <li>4. Safe Completion – Legal closure and registration support</li>
+    <li>4. Safe Completion – Legal closure and registration support</li></ul>
+    
   </div>
 </section>
 
