--- a/nriservices.html
+++ b/nriservices.html
@@ -132,6 +132,7 @@ Legal documentation, agreement drafting, and registration handling
 
 <!---How it works----->
 <section class="work">
+  <h2 style="font-size:32px; font-weight:900; margin-bottom:30px;">How It Works?</h2>
   <div>
     <ul> <li>1. Share Your Requirement – Buy, sell, verify, or register property</li>
     <li>2. We Handle Ground & Legal Work – Site visits, legal checks, documentation</li>
