--- a/nriservices.html
+++ b/nriservices.html
@@ -130,18 +130,41 @@ Legal documentation, agreement drafting, and registration handling
   </div>
 </section>
 
-<!---How it works----->
-<section class="work">
-  <h2 style="font-size:32px; font-weight:900; margin-bottom:30px;">How It Works?</h2>
-  <div>
-    <ul> <li>1. Share Your Requirement – Buy, sell, verify, or register property</li>
-    <li>2. We Handle Ground & Legal Work – Site visits, legal checks, documentation</li>
-    <li>3. Regular Updates – Photos, videos, and progress reports</li>
-    <li>4. Safe Completion – Legal closure and registration support</li></ul>
-    
+<section class="how-it-works">
+  <h2>How It Works</h2>
+
+  <div class="how-card">
+    <div class="step">
+      <span class="step-number">1</span>
+      <p>
+        <strong>Share Your Requirement</strong> – Buy, sell, verify, or register property
+      </p>
+    </div>
+
+    <div class="step">
+      <span class="step-number">2</span>
+      <p>
+        <strong>We Handle Ground & Legal Work</strong> – Site visits, legal checks, documentation
+      </p>
+    </div>
+
+    <div class="step">
+      <span class="step-number">3</span>
+      <p>
+        <strong>Regular Updates</strong> – Photos, videos, and progress reports
+      </p>
+    </div>
+
+    <div class="step">
+      <span class="step-number">4</span>
+      <p>
+        <strong>Safe Completion</strong> – Legal closure and registration support
+      </p>
+    </div>
   </div>
 </section>
 
+ 
 <footer>
   <div>
     <div class="footer-brand">LandCare</div>
