--- a/nriservices.html
+++ b/nriservices.html
@@ -163,6 +163,37 @@ Legal documentation, agreement drafting, and registration handling
     </div>
   </div>
 </section>
+<section class="nri-support">
+  <div class="nri-card">
+    <h2>Serving NRIs Across the Globe</h2>
+
+    <p class="nri-text">
+      We support NRI clients from <strong>USA, UK, UAE, Australia, Canada, Europe</strong>,
+      and beyond, helping them manage property matters anywhere in India
+      with confidence.
+    </p>
+
+    <hr class="divider" />
+
+    <div class="cta-content">
+      <h3>Talk to a Property Expert Today</h3>
+      <p>
+        Let us handle your property matters in India while you stay
+        worry-free abroad.
+      </p>
+
+      <div class="cta-links">
+        <a href="#contact">📞 Contact Us</a>
+        <a href="https://wa.me/91XXXXXXXXXX">💬 WhatsApp Support</a>
+        <a href="mailto:consultlandcare@gmail.com">📧 Email Assistance</a>
+      </div>
+
+      <p class="trust-line">
+        Your trusted partner for NRI land and property solutions in India.
+      </p>
+    </div>
+  </div>
+</section>
 
  
 <footer>
