--- a/nriservices.html
+++ b/nriservices.html
@@ -54,11 +54,11 @@ Site visits, ground verification, and location analysis
 Regular photo, video, and report updates
 </p>
   </div>
-  <img src="assets/images/pahani.webp" class="pahanis-adangal">
+  <img src="assets/images/property_nri.webp" class="property-nri">
 </section>
 
 <section class="section">
-  <img src="assets/images/ec.webp" class="encumbrance-certificate">
+  <img src="assets/images/legal_digilence.webp" class="legal-digilence">
 
   <div>
     <h2>Legal Due Diligence & Document Verification</h2>
@@ -79,11 +79,11 @@ Coordination with lawyers, sub-registrar offices, and officials
 
 Secure and compliant execution of all legal formalities</p>
   </div>
-  <img src="assets/images/tippons.webp" class="tippons">
+  <img src="assets/images/registration.webp" class="registration-assistance">
 </section>
 
 <section class="section">
-  <img src="assets/images/landmap.webp" class="land-maps">
+  <img src="assets/images/support_nri.webp" class="support-nri">
 
   <div>
     <h2>Property Sale Support for NRIs</h2>
