--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="property.html">Property Disputes</a>
     <a href="buysell.html">Buy / Sell</a>
     <a href="land.html">Land Documents</a>
-    <a href="finance.html">Finance and Loans</a>
+    <a href="nriservices.html">NRI Support</a>
 
     <a class="nav-cta"
        href="https://wa.me/918374830926?text=I%20want%20to%20consult"
@@ -139,11 +139,11 @@
     </div>
   </div>
 
-  <div class="service-card" data-link="finance.html"> 
+  <div class="service-card" data-link="nriservices.html"> 
     <div class="card-inner">
 
       <div class="card-front">
-        <img src="assets/images/finance.webp"
+        <img src="assets/images/fnri.webp"
          alt="Land and property services"
          loading="eager"
          fetchpriority="high"
@@ -151,18 +151,20 @@
          height="230"
          />
 
-        <h3>Finance & Loans</h3>
-        <p>We provide reliable assistance for property-related financial needs through trusted banking and financial partners</p>
+        <h3>NRI Land & Property Support</h3>
+        <p>Manage Your Property in India — Without Travelling
+
+End-to-end property management for NRIs in India — buy, sell, verify, and register remotely with a trusted local representative.</p>
         <div class="outline-btn learn-more">Learn More</div>
       </div>
 
       <div class="card-back">
         <h4>Services:</h4>
         <ul>
-          <li>Loan for Buying Properties</li>
-          <li>Verified Banking Partners</li>
-          <li>Loan Support</li>
-          <li>Mortgage/AGP Support</li>
+          <li>Property & Land Identification</li>
+          <li>Legal Due Diligence & Document Verification</li>
+          <li>Registration Assistance (Without Visiting India)</li>
+          <li>Property Sale Support for NRIs</li>
         </ul>
         <button class="outline-btn go-to-page">Go to Page</button>
       </div>
@@ -299,7 +301,7 @@
     <a class="footer-link" href="property.html">Property Disputes</a>
     <a class="footer-link" href="buysell.html">Buy / Sell</a>
     <a class="footer-link" href="land.html">Land Documents</a>
-    <a class="footer-link" href="finance.html">Finance and Loans</a>
+    <a class="footer-link" href="nriservices.html">NRI Support</a>
   </div>
 
   <div>
@@ -333,6 +335,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
