--- a/land.html
+++ b/land.html
@@ -32,7 +32,7 @@
     <a href="property.html">Property Disputes</a>
     <a href="buysell.html">Buy / Sell</a>
     <a href="land.html">Land Documents</a>
-    <a href="finance.html">Finance and Loans</a>
+    <a href="nriservices.html">NRI Support</a>
 
     <a class="nav-cta"
        href="https://wa.me/918374830926?text=I%20want%20to%20consult"
@@ -93,7 +93,7 @@
     <a class="footer-link" href="property.html">Property Disputes</a>
     <a class="footer-link" href="buysell.html">Buy / Sell</a>
     <a class="footer-link" href="land.html">Land Documents</a>
-    <a class="footer-link" href="finance.html">Finance and Loans</a>
+    <a class="footer-link" href="nriservices.html">NRI Support</a>
   </div>
   <div>
     <div class="footer-title">Company</div>
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
