--- a/terms.html
+++ b/terms.html
@@ -94,10 +94,10 @@
 
   <nav>
     <a href="index.html#about">About Us</a>
-    <a href="litigation.html">Litigation</a>
+    <a href="property.html">Property Disputes</a>
     <a href="buysell.html">Buy / Sell</a>
-    <a href="loans.html">Loans</a>
-    <a href="rentals.html">Rentals</a>
+    <a href="land.html">Land Documents</a>
+    <a href="nriservices.html">NRI Support</a>
 
     <a class="nav-cta" href="#">
       Book Appointment
@@ -158,10 +158,10 @@
 
   <div>
     <div class="footer-title">Product</div>
-    <a class="footer-link" href="litigation.html">Litigation</a>
+    <a class="footer-link" href="property.html">Property Disputes</a>
     <a class="footer-link" href="buysell.html">Buy / Sell</a>
-    <a class="footer-link" href="loans.html">Loans</a>
-    <a class="footer-link" href="rentals.html">Rentals</a>
+    <a class="footer-link" href="land.html">Land Documents</a>
+    <a class="footer-link" href="nriservices.html">NRI support</a>
   </div>
 
   <div>
@@ -190,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
