--- a/nriservices.html
+++ b/nriservices.html
@@ -180,9 +180,9 @@ Legal documentation, agreement drafting, and registration handling
     </p>
 
     <div class="cta-actions">
-      <a href="#contact" class="btn primary">📞 Contact Us</a>
-      <a href="https://wa.me/91XXXXXXXXXX" class="btn secondary">💬 WhatsApp Support</a>
-      <a href="mailto:support@landcare.in" class="btn secondary">📧 Email Assistance</a>
+      
+      <a href="https://wa.me/918374830926" class="btn secondary">💬 WhatsApp Support</a>
+      <a href="mailto:consultlandcare@gmail.com" class="btn secondary">📧 Email Assistance</a>
     </div>
 
     <p class="trust-line">
