--- a/index.html
+++ b/index.html
@@ -51,13 +51,18 @@
 
       <!-- FRONT -->
       <div class="card-front">
-        <img src="assets/images/property.webp"
-         alt="Land and property services"
-         loading="eager"
-         fetchpriority="high"
+        <img src="assets/images/property-400.webp"
+         srcset="
+            assets/images/property-320.webp 320w,
+            assets/images/property-400.webp 400w,
+            assets/images/property-640.webp 640w
+         "
+         sizes="(max-width: 900px) 90vw, 275px"
          width="275"
          height="230"
-         />
+         alt="Land and property services"
+         loading="lazy"
+        />
         <h3>Property Disputes</h3>
         <p>Property ownership is based on accurate land papers.  We assist you in obtaining, confirming, and interpreting crucial land records from government departments.</p>
         <div class="outline-btn learn-more">Learn More</div>
@@ -83,13 +88,19 @@
     <div class="card-inner">
 
       <div class="card-front">
-        <img src="assets/images/buysell.webp"
-         alt="Land and property services"
-         loading="eager"
-         fetchpriority="high"
+        <img 
+         src="assets/images/buysell-400.webp"
+         srcset="
+           assets/images/buysell-320.webp 320w,
+           assets/images/buysell-400.webp 400w,
+           assets/images/buysell-640.webp 640w
+         "
+         sizes="(max-width: 900px) 90vw, 275px"
          width="275"
          height="230"
-         />
+         alt="Land and property services"
+         loading="lazy"
+        />
         <h3>Buy / Sell</h3>
         <p>Buying or selling property requires thorough verification and legally compliant documentation. We provide complete assistance to ensure your transaction is safe, transparent, and legally sound.</p>
         <div class="outline-btn learn-more">Learn More</div>
@@ -113,13 +124,19 @@
     <div class="card-inner">
 
       <div class="card-front">
-        <img src="assets/images/land.webp"
-         alt="Land and property services"
-         loading="eager"
-         fetchpriority="high"
+        <img 
+         src="assets/images/land-400.webp"
+         srcset="
+           assets/images/land-320.webp 320w,
+           assets/images/land-400.webp 400w,
+           assets/images/land-640.webp 640w
+         "
+         sizes="(max-width: 900px) 90vw, 275px"
          width="275"
          height="230"
-         />
+         alt="Land and property services"
+         loading="lazy"
+        />
         <h3>Land Documents</h3>
         <p>Accurate land documents are the foundation of property ownership. We help you obtain, verify, and interpret essential land records from government departments</p>
         <div class="outline-btn learn-more">Learn More</div>
@@ -143,13 +160,19 @@
     <div class="card-inner">
 
       <div class="card-front">
-        <img src="assets/images/fnri.webp"
-         alt="Land and property services"
-         loading="eager"
-         fetchpriority="high"
+        <img 
+         src="assets/images/fnri-400.webp"
+         srcset="
+           assets/images/fnri-320.webp 320w,
+           assets/images/fnri-400.webp 400w,
+           assets/images/fnri-640.webp 640w
+         "
+         sizes="(max-width: 900px) 90vw, 275px"
          width="275"
          height="230"
-         />
+         alt="Land and property services"
+         loading="lazy" 
+        />
 
         <h3>NRI Land & Property Support</h3>
         <p>Manage Your Property in India — Without Travelling
@@ -335,6 +358,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
