--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
          width="275"
          height="230"
          alt="Land and property services"
-         loading="lazy"
+         loading="eager"
+         fetchproperty="high"
         />
         <h3>Property Disputes</h3>
         <p>Property ownership is based on accurate land papers.  We assist you in obtaining, confirming, and interpreting crucial land records from government departments.</p>
@@ -358,6 +359,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
