--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LandCare Services – Property, Buy/Sell, Land Documents & Finance</title>
+<link
+  rel="preload"
+  as="image"
+  href="https://www.landcare.co.in/assets/images/property-400.webp"
+  imagesrcset="
+    assets/images/property-320.webp 320w,
+    assets/images/property-400.webp 400w,
+    assets/images/property-640.webp 640w
+  "
+  imagesizes="(max-width: 900px) 90vw, 275px"
+/>
+
 
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/desktop.css" media="(min-width:901px)">
@@ -359,6 +371,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
